public/stylesheets/pages/viewer_editing.css
/* ... */
        #remove_pages_container .document_page_tile:hover .document_page_tile_remove {
          display: block;
        }
      #remove_pages_container .document_page_tile .document_page_tile_number {
        color: #505050;
        font-weight: bold;
        font-size: 13px;
        padding: 4px 16px 0;
      }

.DV-pages.remove_pages_viewer {
  margin-top: 122px;
}
  .DV-pages.remove_pages_viewer .DV-page {
    cursor: pointer;
  }
  .DV-pages.remove_pages_viewer .DV-page:hover {
    opacity: .5;
  }

/* ================= */
/* = Reorder Pages = */
/* ================= */

#reorder_pages_container {
  position: absolute;
  z-index: 10001;
  top: 0;
  left: 0;
  right: 266px;
  background-color: white;
  border-bottom: 1px solid #505050;
}
  #reorder_pages_container.active {
    background-color: #F37500;
  }
  #reorder_pages_container .reorder_pages {
    position: relative;
    overflow-x: auto;
    overflow-y: hidden;
    height: 45px;
  }
  #reorder_pages_container .reorder_pages_confirm {
    padding: 12px 0 0 0;
    text-transform: uppercase;
    font-size: 16px;
    color: #D0D0D0;
    font-weight: bold;
    margin: 2px 0 0 8px;
    overflow: hidden;
    font-family: 'Lucida Grande', sans-serif;
  }
    #reorder_pages_container .reorder_pages_confirm_info {
      float: left;
    }
    #reorder_pages_container .reorder_pages_confirm input {
      margin: 0 8px;
      float: left;
    }

.DV-pages.reorder_pages_viewer {
  margin-top: 45px;
}
  .DV-pages.reorder_pages_viewer .DV-thumbnail {
    cursor: move;
  }
  .DV-pages.reorder_pages_viewer .DV-page:hover {
    opacity: .5;
  }

/* ================== */
/* = Edit Page Text = */
/* ================== */

#edit_page_text_container {
  position: absolute;
  z-index: 10001;
  top: 0;
  left: 0;
  right: 266px;
  background-color: white;
  border-bottom: 1px solid #505050;
}
  #edit_page_text_container.active {
/*    background-color: #F37500;*/
  }
    #edit_page_text_container.active .edit_page_text_confirm_info {
      display: none;
    }
  #edit_page_text_container .edit_page_text {
    position: relative;
    overflow-x: auto;
    overflow-y: hidden;
    height: 122px;
  }
  #edit_page_text_container .edit_page_text_confirm {
    padding: 0;
    text-transform: uppercase;
    font-size: 16px;
    color: #D0D0D0;
    font-weight: bold;
    margin: 2px 0 0 8px;
    overflow: hidden;
    font-family: 'Lucida Grande', sans-serif;
  }
    #edit_page_text_container .edit_page_text_confirm_info {
      float: left;
      margin: 50px 12px;
    }
    #edit_page_text_container .edit_page_text_confirm input {
      margin: 50px 8px 0;
      float: left;
    }
  #edit_page_text_container .document_page_tiles {
    float: left;
  }
    #edit_page_text_container .document_page_tile {
      display: inline;
      float: left;
      margin: 12px 6px 0 6px;
      text-align: center;
      height: 100px;
      width: 62px;
    }
      #edit_page_text_container .document_page_tile img {
        display: block;
        border: 1px solid #505050;
        box-shadow: 1px 1px 1px #D0D0D0;
        -webkit-box-shadow: 1px 1px 1px #D0D0D0;
        -moz-box-shadow: 1px 1px 1px #D0D0D0;
      }
      #edit_page_text_container .document_page_tile .document_page_tile_remove {
        float: left;
        margin: 6px 0 0 0;
        display: none;
      }
        #edit_page_text_container .document_page_tile:hover .document_page_tile_remove {
          display: block;
        }
      #edit_page_text_container .document_page_tile .document_page_tile_number {
        color: #505050;
        font-weight: bold;
        font-size: 13px;
        padding: 4px 16px 0;
      }
.DV-pages.edit_page_text_viewer {
  margin-top: 122px;
}
.DV-textContents.DV-editing {
  border: 1px dotted #505050;
}

/* ================= */
/* = Replace Pages = */
/* ================= */

#replace_pages_container {
  position: absolute;
  z-index: 10001;
  top: 0;
  left: 0;
  right: 266px;
  background-color: white;
  border-bottom: 1px solid #505050;
  height: 64px;
}
  #replace_pages_container .replace_pages_hint {
    font-size: 16px;
    color: #D0D0D0;
    font-weight: bold;
    margin: 24px 0 0 24px;
    font-family: 'Lucida Grande', sans-serif;
    text-transform: uppercase;
    position: absolute;
    top: 0;
  }
  #replace_pages_container .replace_pages_upload {
    margin: 20px 24px 0 0;
    visibility: hidden;
  }
  #replace_pages_container.on_upload .replace_pages_upload {
    visibility: visible;
  }

  #replace_pages_container #new_documentUploader {
    position: absolute;
    right: 24px;
    top: 20px;
    display: none;
  }
  #replace_pages_container.on_upload #new_documentUploader {
    display: block;
  }
.DV-pages.replace_pages_viewer {
  margin-top: 64px;
}


/* ============== */
/* = Thumbnails = */
/* ============== */

.DV-removePages .DV-thumbnails .DV-thumbnail.DV-hover-image .DV-overlay {
  cursor: pointer;
  z-index: 10002;
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  opacity: .2;
  background-color: yellow;
}
.DV-removePages .DV-overlay:hover {
  background-color: orange;
}

.DV-removePages .DV-overlay.visible {
  background-color: red;
}

.DV-replacePages .DV-thumbnails .DV-thumbnail.DV-hover-thumbnail .DV-pageNumber {
  text-decoration: none;
}
.DV-replacePages .DV-thumbnails .DV-thumbnail .DV-overlay {
  cursor: pointer;
  z-index: 10002;
  position: absolute;
  top: 0;
  width: 3px;
  height: 100%;
  opacity: .8;
  background-color: orange;
  display: none;
}
.DV-replacePages .DV-thumbnails .DV-thumbnail.DV-hover-thumbnail .DV-overlay.left {
  right: inherit;
  left: 0px;
  display: block;
}
.DV-replacePages .DV-thumbnails .DV-thumbnail.DV-hover-thumbnail .DV-overlay.right {
  left: inherit;
  right: -3px;
  display: block;
}
.DV-replacePages .DV-thumbnails .DV-thumbnail .DV-overlay.left_chosen {
  right: inherit;
  left: 0px;
  display: block;
  background-color: darkred;
}
/* ... */

